Fixed an issue where the save buttons would be un-clickable because they were overlapped by a canvas.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.ProcessManagement.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Agent.Admin.ProcessManagement.css
@@ -1,6 +1,6 @@
 /**
  * @project     OTRS (http://www.otrs.org) - Agent Frontend
- * @version     $Revision: 1.23 $
+ * @version     $Revision: 1.24 $
  * @copyright   OTRS AG
  * @license     AGPL (http://www.gnu.org/licenses/agpl.txt)
  */
@@ -19,6 +19,10 @@
 a.Export {
     background: url("../img/database_export.png") no-repeat left center;
     padding-left: 24px;
+}
+
+.SaveButtons {
+    margin-top: 30px;
 }
 
 .Icon {
